--- a/Customization.html
+++ b/Customization.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>巧克力客製化</title>
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -12,6 +12,7 @@
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
+<link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
