--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>禮盒客製化</title>
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -176,7 +176,7 @@
                         id="center_display_second_page_img7">
                 </div>
                 <div class="center_display_second_page_box">
-                    <img id="center_display_second_page_box2" src="./images/Custom_block/box/downloadedImage__2.png"
+                    <img id="center_display_second_page_box2" src="./images/Custom_block/box/downloadedImage_3.png"
                         alt="">
                 </div>
             </div>
