--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>小巧克力客製化</title>
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -96,7 +96,10 @@
                     </div>
                 </div>
                 <div id="select_field2__second_page">
-                    <p id="select_field2__second_page_p1">內餡</p>
+                    <div id="select_field2_divtext">
+                        <p id="select_field2_Filling">內餡</p>
+                        <p id="select_field2_hint">請選擇1種內餡口味</p>
+                    </div>
                     <div id="select_field2__second_page_div1">
                         <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame8.png" alt=""
                             class="select_field2_img" id="original_flavor_img">
@@ -137,7 +140,10 @@
                     </div>
                 </div>
                 <div id="select_field3__second_page">
-                    <p>模板</p>
+                    <div id="select_field3_textDiv">
+                        <p id="select_field3_template">模板</p>
+                        <p id="select_field3_hint">請拖移來變更模板</p>
+                    </div>
                     <div id="select_field3__second_page_div">
                         <a href="javascript:void(0)"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame16.svg" alt=""
@@ -204,7 +210,9 @@
                     <img id="center_display_second_page_box1"
                         src="./images/Custom_block/middle/downloadedImage-Photoroom5.svg" alt="">
                     <div id="center_display_second_page_box_slab">
-                        <img src="./images/Custom_block/small_chocolate/left_sidebar/Rectangle99.svg" alt=""
+                        <!-- <img src="./images/Custom_block/small_chocolate/left_sidebar/Rectangle99.svg" alt=""
+                            id="center_display_second_page_box_slab_img"> -->
+                        <img src="./images/Custom_block/middle/downloadedImage1-2.svg" alt=""
                             id="center_display_second_page_box_slab_img">
                     </div>
                     <div id="second_page_smallbox">
@@ -257,8 +265,7 @@
                                 src="./images/Custom_block/menu_below/Frame6.svg" alt="" id="menu_below_li_right2_img">
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
-                            <img src="./images/Custom_block/menu_below/Frame7.svg" alt=""
-                                id="menu_below_li_right3_img">
+                            <img src="./images/Custom_block/menu_below/Frame7.svg" alt="" id="menu_below_li_right3_img">
                         </a></li>
                 </ul>
             </div>
