--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>購物車</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -40,7 +40,7 @@
                 <div id="box1_box1">
                     <div id="product_display">
                         <div id="product_tips">
-                            <img src="./images/shopping_cart/commodity1.svg" alt="" id="commodity1">
+                            <img src="./images/Custom_block/box/downloadedImage_3.png" alt="" id="commodity1">
                             <div id="product_tips_p1">
                                 <p id="product_tips_p1_p1">客製巧克力禮盒</p>
                                 <p id="product_tips_p1_p2">板狀巧克力 *1</p>
@@ -78,7 +78,7 @@
                 <div id="box1_box2">
                     <div id="product_display">
                         <div id="product_tips">
-                            <img src="./images/shopping_cart/commodity1.svg" alt="" id="commodity1">
+                            <img src="./images/Custom_block/box/downloadedImage_3.png" alt="" id="commodity1">
                             <div id="product_tips_p1">
                                 <p id="product_tips_p1_p1">客製巧克力禮盒</p>
                                 <p id="product_tips_p1_p2">板狀巧克力 *1</p>
