--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>購物車結帳</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -220,7 +220,7 @@
                         </div>
                         <div id="full_list_box_right_order_box">
                             <div id="box_picture_details">
-                                <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
+                                <img src="./images/Custom_block/box/downloadedImage_3.png" alt="">
                                 <div id="full_list_box_right_order_box_p">
                                     <p class="chbox1">客製巧克力禮盒</p>
                                     <p class="chbox1">NT.2500</p>
@@ -400,7 +400,7 @@
         <div id="full_list_box_right_order_box2">
             <div id="full_list_box_right_order_box">
                 <div id="box_picture_details2">
-                    <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
+                    <img src="./images/Custom_block/box/downloadedImage_3.png" alt="">
                     <div id="full_list_box_right_order_box_p">
                         <p class="chbox1">客製巧克力禮盒</p>
                         <p class="chbox1">NT.2500</p>
