--- a/QnA.html
+++ b/QnA.html
@@ -17,7 +17,7 @@
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 
-    <title>Q&A</title>
+    <title>Q&A 相關問題</title>
 </head>
 <!-- menu -->
 <div id="menu"></div>
