--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./css/Menu.css">
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
+    <link rel="favicon" href="favicon.ico">
+
     
 
 </head>
