--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -13,7 +13,8 @@
     <script src="./js/Menu.js"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
-</head> 
+    <link rel="icon" href="./favicon.ico">
+</head>
 
 <body>
     <div id="menu"></div>
@@ -123,11 +124,10 @@
                         <p id="left_sidebar_three_page_div3_div_p">顏色</p>
                     </div>
                     <div id="left_sidebar_three_page_div3_div_1">
-                        <a href="javascript:void(0)" id=""><img
-                                src="./images/Custom_block/box/left_sidebar/Frame15.svg" alt=""></a>
+                        <a href="javascript:void(0)" id=""><img src="./images/Custom_block/box/left_sidebar/Frame15.svg"
+                                alt=""></a>
                         <a href="javascript:void(0)" id="ribbon_red"><img
-                                src="./images/Custom_block/box/left_sidebar/Frame16.svg" alt=""
-                                id="ribbon_red_img"></a>
+                                src="./images/Custom_block/box/left_sidebar/Frame16.svg" alt="" id="ribbon_red_img"></a>
                         <a href="javascript:void(0)" id="ribbon_orange"><img
                                 src="./images/Custom_block/box/left_sidebar/Frame17.svg" alt=""
                                 id="ribbon_orange_img"></a>
@@ -137,8 +137,8 @@
                         <a href="javascript:void(0)" id="ribbon_pink"><img
                                 src="./images/Custom_block/box/left_sidebar/Frame19.svg" alt=""
                                 id="ribbon_pink_img"></a>
-                        <a href="javascript:void(0)" id=""><img
-                                src="./images/Custom_block/box/left_sidebar/Frame20.svg" alt=""></a>
+                        <a href="javascript:void(0)" id=""><img src="./images/Custom_block/box/left_sidebar/Frame20.svg"
+                                alt=""></a>
                     </div>
                     <div id="left_sidebar_three_page_div3_hr">
                         <img src="./images/Custom_block/box/Rectangle4.svg" alt="">
@@ -217,8 +217,7 @@
                                 src="./images/Custom_block/menu_below/Frame6.svg" alt="" id="menu_below_li_right2_img">
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
-                            <img src="./images/Custom_block/menu_below/Frame7.svg" alt=""
-                                id="menu_below_li_right3_img">
+                            <img src="./images/Custom_block/menu_below/Frame7.svg" alt="" id="menu_below_li_right3_img">
                         </a></li>
                 </ul>
             </div>
