--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -12,6 +12,7 @@
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
