--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -13,6 +13,7 @@
     <script src="./js/Menu.js"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
