--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -14,6 +14,7 @@
     <script src="./js/Menu.js"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
+    <link rel="icon" href="./favicon.ico">
 </head>
 <div id="menu"></div>
 <script type="text/babel">
