--- a/QnA.html
+++ b/QnA.html
@@ -18,6 +18,7 @@
     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 
     <title>Q&A 相關問題</title>
+    <link rel="icon" href="./index_images/favicon.ico">
 </head>
 <!-- menu -->
 <div id="menu"></div>
