--- a/news.html
+++ b/news.html
@@ -21,6 +21,7 @@
      <script src="./js/Menu.js"></script>
      <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
      <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
+     <link rel="icon" href="./index_images/favicon.ico">
 
     </head>
 
