--- a/shop.html
+++ b/shop.html
@@ -12,6 +12,7 @@
     <!-- 引用ShopFilter元件 -->
     <script type="text/babel" src="./ShopFilter.jsx"></script>
     <title>SHOP 經典商品</title>
+    <link rel="icon" href="./index_images/favicon.ico">
     <!-- 引用menu -->
     <link rel="stylesheet" href="./css/Menu.css">
     <script type="text/babel" src="./Menu.jsx"></script>
