--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>購物車結帳</title>
+    <link rel="icon" href="./index_images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/Customization.css">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
