--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
-    <link rel="icon" href="favicon.ico" type="favicon.svg" >
+    <link rel="icon" href="./index_images/favicon.ico">
 </head>
 <div id="menu"></div>
 <script type="text/babel">
